--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+node_modules
+npm-debug.log
 .DS_Store
-.env
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
+dist
