--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "express": "^4.13.4",
+    "http-proxy-middleware": "^0.17.4",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.17.0",
     "webpack": "^1.12.2",
