--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
   }
