--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.16.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   }
 }
